--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 	<title>College Football</title>
 	<!-- CSS -->
 	<link href="css/main.css" rel="stylesheet" type="text/css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YQC37FT3TK"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'G-YQC37FT3TK');
+	</script>
 </head>
 <body>
 
